--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-tsparticles": "^2.12.2",
