--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-clock": "^5.0.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-live-clock": "^6.1.23-beta",
     "react-router-dom": "^6.15.0",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.0.7",
