--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.7",
+    "three": "^0.175.0",
+    "vanta": "^0.5.24",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
